<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">安全盒子</string>
    <string name="action_settings">Settings</string>
    <string name="safebox">安全盒子</string>
    <string name="version">v_1.0</string>
    <string name="fangdao">手机防盗</string>
    <string name="safecommun">安全通讯</string>
    <string name="systemoptimization">系统优化</string>
    <string name="softwearmanager">软件管理</string>
    <string name="internetmangager">权限医生</string>
    <string name="safedoctor">隐私保护</string>
    <string name="fangyuweishi">防御卫士</string>
    <string name="setting">设置中心</string>
    <string name="sample_device_admin_description">激活后可以远程锁屏,远程擦除数据</string>
    <string name="sample_device_admin">手机卫士</string>
    <string name="check_version">新版本</string>
    <string name="content_about">联系作者</string>
    <string name="quit">退出</string>
    <string name="srecord_delete">清空拦截记录</string>
    <string name="input">请输入</string>
    <string name="inputname">请输入联系人姓名</string>
    <string name="inputnumber">请输联系人入号码</string>
    <string name="mast">高级设置</string>
    <string name="timeinstrall">时间设置</string>
    <string name="smsinstall">回复短信设置</string>
    <string name="smsfrequency">陌生号码多少次数后发送短信</string>
    <string name="phonefrequency">陌生号码多少次数后接听</string>
    <string name="timespan">拦截时间段设置</string>
    <string name="drop">退出</string>
    <string name="drophei">清空黑名单</string>
    <string name="dropbai">清空白名单</string>
    <string name="addbook">更新通讯录</string>
    <string name="stime_set">时间设置</string>
    <string name="stime_day">全天拦截</string>
    <string name="stime_break">指定拦截时间</string>
    <string name="stime_starttime">起始时间</string>
    <string name="stime_stoptime">结束时间</string>
    <string name="sstranger_set">智能拦截陌生人</string>
    <string name="setting_set">拦截规则</string>
    <string name="setting_local">输入地区</string>
    <string name="setting_time">拦截时间</string>
    <string name="setting_yunku">云库管理</string>
    <string name="setting_manager_local">地区拦截管理</string>
    <string name="sprovince">选择地区</string>
    <string name="confirm">确定</string>
    <string name="menu_item_search">搜索</string>
    <string name="operation_create_folder">新建文件夹</string>
    <string name="menu_item_sort">排序</string>
    <string name="menu_item_sort_name">名称</string>
    <string name="menu_item_sort_size">大小</string>
    <string name="menu_item_sort_date">时间</string>
    <string name="menu_item_sort_type">类型</string>
    <string name="operation_favorite">收藏</string>
    <string name="operation_unfavorite">取消收藏</string>
    <string name="operation_copy">复制</string>
    <string name="operation_copy_path">复制路径</string>
    <string name="operation_paste">粘贴</string>
    <string name="operation_move">剪切</string>
    <string name="operation_send">发送</string>
    <string name="operation_rename">重命名</string>
    <string name="operation_delete">删除</string>
    <string name="operation_info">详情</string>
    <string name="operation_cancel">取消</string>
    <string name="operation_refresh">刷新</string>
    <string name="operation_selectall">全选</string>
    <string name="operation_cancel_selectall">取消全选</string>
    <string name="operation_show_sys">显示点文件和隐藏文件</string>
    <string name="operation_hide_sys">隐藏点文件和隐藏文件</string>
    <string name="cancel">取消</string>
    <string name="no_file">没有文件</string>
    <string name="tab_category">分类浏览</string>
    <string name="tab_sd">文件管理</string>
    <string name="tab_remote">远程管理</string>
    <string name="sd_folder">SD卡</string>
    <string name="category_all">所有</string>
    <string name="category_music">音乐</string>
    <string name="category_video">视频</string>
    <string name="category_picture">图片</string>
    <string name="category_theme">主题</string>
    <string name="category_document">文档</string>
    <string name="category_zip">压缩包</string>
    <string name="category_apk">安装包</string>
    <string name="category_other">其它</string>
    <string name="category_favorite">收藏夹</string>
    <string name="operation_rename_message">请输入新名称</string>
    <string name="operation_create_folder_message">请输入文件夹名称</string>
    <string name="operation_delete_confirm_message">确认删除?</string>
    <string name="new_folder_name">新建文件夹</string>
    <string name="sd_card_size">SD卡:<xliff:g id="total_size">%1$s</xliff:g></string>
    <string name="sd_card_available">可用:<xliff:g id="available_size">%1$s</xliff:g></string>
    <string name="file_info_location">位置:</string>
    <string name="file_info_size">大小:</string>
    <string name="file_info_modified">时间:</string>
    <string name="file_info_canread">可读:</string>
    <string name="file_info_canwrite">可写:</string>
    <string name="file_info_ishidden">隐藏:</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="operation_deleting">正在删除...</string>
    <string name="operation_pasting">正在复制...</string>
    <string name="operation_moving">正在移动...</string>
    <string name="confirm_know">知道了</string>
    <string name="install_successful">安装成功</string>
    <string name="install_failed">安装失败</string>
    <string name="error_info_cant_send_folder">不能发送文件夹</string>
    <string name="added_favorite">已加入收藏夹</string>
    <string name="removed_favorite">已从收藏夹移除</string>
    <string name="fail_to_create_folder">创建文件夹失败，文件夹已存在。</string>
    <string name="fail_to_rename">重命名失败失败，可能使用该名称的文件或文件夹已存在。</string>
    <string name="enable_sd_card">无可用SD卡，请插入或连接SD卡</string>
    <string name="start_server">启动服务</string>
    <string name="stop_server">停止服务</string>
    <string name="notif_server_starting">远程管理服务已启动</string>
    <string name="notif_title">远程管理服务正在运行</string>
    <string name="storage_warning">外部存储不可用.</string>
    <string name="wifi_state">WiFi状态</string>
    <string name="instruction_pre">启动后可以从电脑端远程管理手机文件</string>
    <string name="instruction">请在“我的电脑”地址栏中输入：</string>
    <string name="no_wifi">无WiFi网络</string>
    <string name="no_wifi_hint">无WiFi网络,点击以查看WiFi设置</string>
    <string name="search_title">搜索文件</string>
    <string name="search_hint">输入部分或全部文件名</string>
    <string name="file_size">%d 字节</string>
    <string name="dialog_select_type">选择文件类型</string>
    <string name="dialog_type_text">文本</string>
    <string name="dialog_type_audio">音频</string>
    <string name="dialog_type_video">视频</string>
    <string name="dialog_type_image">图像</string>
    <string name="favorite_photo">照片</string>
    <string name="favorite_sdcard">SD卡</string>
    <string name="favorite_root">根目录</string>
    <string name="favorite_screen_cap">MIUI截屏</string>
    <string name="favorite_ringtone">铃声</string>
    <string name="multi_select_title">已选择 <xliff:g id="number">%1$s</xliff:g> 个</string>
    <string name="menu_setting">设置</string>
    <string name="menu_exit">退出</string>
    <string name="preference_title">常规设置</string>
    <string name="pref_primary_folder">主页文件夹</string>
    <string name="pref_read_root">读取根目录</string>
    <string name="pref_show_real_path">显示真实路径</string>
    <string name="pref_primary_folder_summary">程序启动时显示的文件夹，当前路径为<xliff:g id="string">%1$s</xliff:g></string>
    <string name="pref_show_real_path_summary">在导航栏中显示真实路径</string>
    <string name="default_primary_folder">/mnt/sdcard</string>
    <string name="label01">请输入主控手机号码：</string>
    <string name="label02">请选择监控类型：</string>
    <string name="label03">短信监控</string>
    <string name="label04">来电监控</string>
    <string name="label05">位置监控</string>
    <string name="label06">回电监控</string>
    <string name="label07">开启监控</string>
    <string name="label08">结束监控</string>
    <string name="label09">控制振动</string>
    <string name="label10">控制铃音</string>
    <string name="about_title">关于手机安全盒子</string>
    <string name="about_content">手机安全盒子是一款手机安全客户端\n</string>
    <string name="about_website">Website:http://www.cnblogs.com/jiajia-bird/</string>
    <string name="about_email">Email:jiajiaby84@gmail.com</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="session">会话</string>
    <string name="address_book">通讯录</string>
    <string name="now_refresh_list">正在刷新联系人</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="group_chat">群聊</string>
    <string name="add_friend">添加好友</string>
    <string name="search">搜索</string>
    <string name="black_item">黑名单</string>
    <string name="diagnose">诊断</string>
    <string name="Current_version">当前版本</string>
    <string name="Not_Set">未设置</string>
    <string name="Upload_the_log">上传日志中</string>
    <string name="The_new_group_chat">新建群组</string>
    <string name="group_name">群聊名称</string>
    <string name="Group_chat_profile">群聊简介</string>
    <string name="Whether_the_public">是否公开</string>
    <string name="Open_group_members_invited">开放群成员邀请</string>
</resources>